# libigl_CGAL_openGL

./: .gitignore  README.md
LearnOpenGLBuild/: 1.getting_started__1.1.hello_window.vcxproj  1.getting_started__1.1.hello_window.vcxproj.filters  1.getting_started__1.2.hello_window_clear.vcxproj  1.getting_started__1.2.hello_window_clear.vcxproj.filters  1.getting_started__2.1.hello_triangle.vcxproj  1.getting_started__2.1.hello_triangle.vcxproj.filters  1.getting_started__2.2.hello_triangle_indexed.vcxproj  1.getting_started__2.2.hello_triangle_indexed.vcxproj.filters  1.getting_started__2.3.hello_triangle_exercise1.vcxproj  1.getting_started__2.3.hello_triangle_exercise1.vcxproj.filters  1.getting_started__2.4.hello_triangle_exercise2.vcxproj  1.getting_started__2.4.hello_triangle_exercise2.vcxproj.filters  1.getting_started__2.5.hello_triangle_exercise3.vcxproj  1.getting_started__2.5.hello_triangle_exercise3.vcxproj.filters  1.getting_started__3.1.shaders_uniform.vcxproj  1.getting_started__3.1.shaders_uniform.vcxproj.filters  1.getting_started__3.2.shaders_interpolation.vcxproj  1.getting_started__3.2.shaders_interpolation.vcxproj.filters  1.getting_started__3.3.shaders_class.vcxproj  1.getting_started__3.3.shaders_class.vcxproj.filters  1.getting_started__4.1.textures.vcxproj  1.getting_started__4.1.textures.vcxproj.filters  1.getting_started__4.2.textures_combined.vcxproj  1.getting_started__4.2.textures_combined.vcxproj.filters  1.getting_started__4.4.textures_exercise2.vcxproj  1.getting_started__4.4.textures_exercise2.vcxproj.filters  1.getting_started__4.5.textures_exercise3.vcxproj  1.getting_started__4.5.textures_exercise3.vcxproj.filters  1.getting_started__4.6.textures_exercise4.vcxproj  1.getting_started__4.6.textures_exercise4.vcxproj.filters  1.getting_started__5.1.transformations.vcxproj  (+140 more)
build32/: ALL_BUILD.vcxproj  (+51 more)
myTest/: CMakeLists.txt  main.cpp
(+1937 files in other folders)
